@@ -51,6 +51,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5375) profiling does not respect read-only mode.
 * (bug 7070) monobook/user.gif has antialias artifacts
 * (bug 9877) Fix Catalan translation of rev-deleted-text-view
+* (bug 9123) Safer way when applying $wgLocalTZoffset
+
 
 == Maintenance script changes since 1.10 ==
 
